# stuppuCur

./: .dockerignore  .env.example  .eslintrc.cjs  .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  env.d.ts  go.mod  index.html  nginx.conf  package-lock.json  package.json  pom.xml  pyproject.toml  tsconfig.json  turbo.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
apps/web/: next.config.js  package.json  tailwind.config.js
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: project-card.tsx
cmd/server/: main.go
configs/: config.dev.yaml  config.yaml
deployments/monitoring/: prometheus.yml
deployments/nginx/: nginx.conf
deployments/prometheus/: prometheus.yml
deployments/redis/: redis.conf
docs/: ARCHITECTURE.md
enterprise-admin/: pom.xml
enterprise-admin/src/main/java/com/enterprise/admin/: EnterpriseAdminApplication.java
enterprise-admin/src/main/java/com/enterprise/admin/config/: Knife4jConfig.java  MyBatisPlusConfig.java
enterprise-admin/src/main/java/com/enterprise/admin/controller/: AuthController.java
enterprise-admin/src/main/resources/: application.yml
enterprise-admin/src/main/resources/db/: init.sql
enterprise-common/: pom.xml
enterprise-common/src/main/java/com/enterprise/common/core/: Result.java  ResultCode.java
enterprise-common/src/main/java/com/enterprise/common/exception/: BusinessException.java  GlobalExceptionHandler.java
enterprise-common/src/main/java/com/enterprise/common/utils/: AssertUtils.java
enterprise-security/: pom.xml
enterprise-security/src/main/java/com/enterprise/security/config/: SecurityConfig.java
enterprise-security/src/main/java/com/enterprise/security/filter/: JwtAuthenticationFilter.java
enterprise-security/src/main/java/com/enterprise/security/handler/: AccessDeniedHandlerImpl.java  AuthenticationEntryPointImpl.java
enterprise-security/src/main/java/com/enterprise/security/utils/: JwtUtils.java
enterprise-system/: pom.xml
enterprise-system/src/main/java/com/enterprise/system/entity/: User.java
enterprise-system/src/main/java/com/enterprise/system/mapper/: UserMapper.java
enterprise-system/src/main/java/com/enterprise/system/service/: UserService.java
enterprise-system/src/main/java/com/enterprise/system/service/impl/: UserDetailsServiceImpl.java  UserServiceImpl.java
enterprise-system/src/main/resources/mapper/: UserMapper.xml
internal/app/: app.go  router.go
internal/config/: config.go
internal/handler/: health_handler.go  response.go  user_handler.go
internal/middleware/: auth.go  cors.go  logger.go  metrics.go
internal/model/: base.go  user.go
internal/repository/: user_repository.go
internal/service/: user_service.go
pkg/database/: mysql.go  redis.go
pkg/logger/: logger.go
pkg/utils/: jwt.go
scripts/: deploy.sh  init-db.sql  setup.sh
src/: App.vue  __init__.py  cli.py  main.py  main.ts
src/api/: project.ts  routes.py  user.ts
src/api/v1/: health.py  users.py
src/core/: config.py  database.py  logging.py
src/layout/: index.vue
src/models/: user.py
src/router/: index.ts
src/schemas/: user.py
src/services/: user_service.py
src/stores/: user.ts
src/styles/: index.scss
src/types/: index.ts
src/utils/: request.ts  storage.ts  validate.ts
src/views/dashboard/: index.vue
src/views/error/: 404.vue
src/views/login/: index.vue
src/views/project/: index.vue
src/views/user/: index.vue
test/: user_test.go
tests/: __init__.py  conftest.py  test_example.py
